# prometheus-grafana-demo

./: .env.base  Makefile  README.MD  docker-compose.yml
app/: pyproject.toml
docker/app/: Dockerfile
docker/prometheus/: prometheus.yml
